# Research-26-27

./: README.md  YEAR1_CLAUDE_CODE_BRIEF.md
project-sentinel-year1/: .gitignore  Makefile  PROGRESS_LOG.md  README.md  REPRODUCIBILITY_ARTIFACT.md  environment.yml  pyproject.toml  requirements.txt
project-sentinel-year1/config/: config.yaml
project-sentinel-year1/data/interim/: aggregation_constructs.fasta  tau_sequence.json
project-sentinel-year1/figures/: CAPTIONS.md
project-sentinel-year1/notebooks/: colab_af2_multimer.ipynb  colab_rfdiffusion.ipynb
project-sentinel-year1/reports/: YEAR1_SCIENTIFIC_REPORT.md
project-sentinel-year1/results/: PROVENANCE.json  TEST_SUMMARY.json  compute_profile.json
project-sentinel-year1/results/aggregation/: nucleating_segments.json  tau_aggregation_profile.csv  validation_summary.json
project-sentinel-year1/results/atlas/: ad_strain_fingerprint.json  fold_similarity_rmsd.json  per_strain_characterization.json  strain_summary_table.csv  zipper_crystal_comparison.json
project-sentinel-year1/results/benchmarks/: aggregation_roc_pr.json  (+4 more)
project-sentinel-year1/tests/: conftest.py  test_active_learning.py  test_aggregation.py  test_atlas.py  test_bench_scaffold_comparison.py  test_chemical_complementarity.py  test_design_geometry.py  test_design_scoring.py  test_developability_exposure_fix.py  test_developability_reference.py  test_docking_refinement.py  test_io.py  test_md.py  test_outputs_exist.py  test_pipeline_wiring.py  test_scaffold_library.py  test_scientific_validation.py  test_topology_builder.py  test_utils.py
(+520 files in other folders)
